--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,6 @@
-@import url("https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
-
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 body {
-  font-family: "Fira Sans", sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 
 img {
@@ -30,7 +29,8 @@ button {
   font-family: inherit;
 }
 
-button {
+button,
+input {
   border: none;
 }
 
@@ -43,20 +43,139 @@ article {
   margin: auto;
 }
 
+form {
+  margin-bottom: 1em;
+}
+
+.current__date {
+  display: none;
+}
+
 .app {
   display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   min-height: 100vh;
+  padding: 1em;
+  background-image: url(../weather.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .content__weather {
-  background-color: lightcoral;
+  background-color: hsla(305, 25%, 90%, 0.5);
   min-width: 350px;
   padding: 2em 1.5em;
+  border-radius: 1em;
+  box-shadow: 18px 15px 78px -4px rgba(0, 0, 0, 0.75);
+  position: relative;
+}
+
+.content__header {
+  display: flex;
+  flex-direction: column;
+  gap: 0.8em;
+  margin-bottom: 1em;
 }
 
 .title,
 .subtile {
   text-align: center;
+}
+
+.title {
+  font-weight: 800;
+}
+
+.subtitle {
+  font-weight: 600;
+}
+
+.inputValue {
+  padding: 0.5em 0.8em;
+  border-radius: 0.5em;
+  margin-right: 0.5em;
+  border-bottom: 2px solid crimson;
+  outline: none;
+  transition: border-bottom 1s;
+}
+
+.inputValue:focus {
+  border-bottom: 2px solid green;
+}
+
+.search__button {
+  padding: 0.5em 0.8em;
+  border-radius: 0.5em;
+  background-color: crimson;
+  color: white;
+  transition: background-color 1s, transform 1s;
+}
+
+.search__button:hover {
+  background-color: lightcoral;
+  transform: scale(1.1);
+}
+
+.content__info {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 2em;
+  margin-bottom: 1.5em;
+}
+
+.content__info .info {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5em;
+}
+
+.info h3 {
+  margin-bottom: 0.5em;
+}
+
+.content__info .info .info__list {
+  display: flex;
+  flex-direction: column;
+  gap: 0.8em;
+}
+
+.info__list li {
+  display: flex;
+  justify-content: space-between;
+  gap: 1em;
+}
+
+.span__title {
+  font-weight: 500;
+}
+
+.span__info {
+  font-weight: 900;
+}
+
+.content__temp {
+  margin-bottom: 1em;
+}
+
+.content__temp h2 {
+  font-weight: 900;
+  font-size: 1.8rem;
+}
+
+.temp__button {
+  padding: 0.6em 1.2em;
+  border-radius: 0.5em;
+  background-color: crimson;
+  color: white;
+  transition: background-color 1s, transform 1s;
+}
+
+.temp__button:hover {
+  background-color: lightcoral;
+  transform: scale(1.1);
 }
 
 .loading {
@@ -76,6 +195,21 @@ article {
   fill: hsl(354, 78%, 60%);
   width: 150px;
   animation: scroll 2s infinite;
+}
+
+@media (min-width: 700px) {
+  .current__date {
+    display: block;
+    position: absolute;
+    bottom: 1em;
+    color: black;
+    font-weight: 600;
+    padding: 1em 2em;
+    border-radius: 0.5em;
+    background-color: hsla(305, 25%, 90%, 0.5);
+    min-width: 350px;
+    text-align: center;
+  }
 }
 
 @keyframes scroll {
